@@ -30,6 +30,7 @@ Hbase Change Log
    HBASE-609   Master doesn't see regionserver edits because of clock skew
    HBASE-607   MultiRegionTable.makeMultiRegionTable is not deterministic enough
                for regression tests
+   HBASE-405   TIF and TOF use log4j directly rather than apache commons-logging
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
